cmake_minimum_required(VERSION 3.8)
project(siena_0_3_2)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        build/sienaconf.h
        include/siena/IO.h
        include/siena/IO.icc
        include/siena/Monitor.h
        include/siena/SENP.h
        include/siena/SENP.icc
        include/siena/Siena.h
        include/siena/Siena.icc
        include/siena/SienaIO.h
        include/siena/SimpleSiena.h
        include/siena/Socket.h
        include/siena/Socket.icc
        include/siena/URI.h
        include/siena/URI.icc
        include/chrono_time.h
        include/data_structure.h
        include/generator.h
        include/oldrein.h
        include/printer.h
        include/rein.h
        include/siena.h
        include/util.h
        Rein/include/chrono_time.h
        Rein/include/data_structure.h
        Rein/include/generator.h
        Rein/include/oldrein.h
        Rein/include/printer.h
        Rein/include/rein.h
        Rein/include/util.h
        Rein/generator.cc
        Rein/oldrein.cc
        Rein/printer.cc
        Rein/rein.cc
        Rein/util.cc
        siena/include/siena/IO.h
        siena/include/siena/IO.icc
        siena/include/siena/SENP.h
        siena/include/siena/SENP.icc
        siena/include/siena/Siena.h
        siena/include/siena/Siena.icc
        siena/include/siena/SienaIO.h
        siena/include/siena/SimpleSiena.h
        siena/include/siena/Socket.h
        siena/include/siena/Socket.icc
        siena/include/siena/URI.h
        siena/include/siena/URI.icc
        siena/include/siena.h
        siena/include/sienaconf.h
        siena/tests/echo.cc
        siena/tests/httpd.cc
        siena/tests/interested_party.cc
        siena/tests/object_of_interest.cc
        siena/tests/www.cc
        siena/SENP.cc
        siena/Siena.cc
        siena/SienaIO.cc
        siena/SimpleSiena.cc
        siena/Socket.cc
        siena/URI.cc
        tests/echo.cc
        tests/httpd.cc
        tests/interested_party.cc
        tests/object_of_interest.cc
        tests/www.cc
        generator.cc
        Monitor.cc
        oldrein.cc
        printer.cc
        rein.cc
        SENP.cc
        Siena.cc
        SienaIO.cc
        SimpleSiena.cc
        Socket.cc
        URI.cc
        util.cc)

add_executable(siena_0_3_2 ${SOURCE_FILES})